include exercises and review fourier 4, 5 and 6

--- a/Content/convolution_correlation_1D_1.ipynb
+++ b/Content/convolution_correlation_1D_1.ipynb
@@ -166,9 +166,9 @@
    "source": [
     "<a id='eq4'></a>\n",
     "$$\n",
-    "\\mathbf{w} = \\mathbf{F}_{(N)}^{\\ast} \\Bigg\\{ \\left( \\sqrt{N} \\:\\: \n",
-    "\\mathbf{F}_{(N)} \\, \\mathbf{b} \\right) \\circ \n",
-    "\\left( \\mathbf{F}_{(N)} \\, \\mathbf{a} \\right) \\Bigg\\} \\quad . \\tag{4}\n",
+    "\\mathbf{w} = \\mathbf{F}_{N}^{\\ast} \\Bigg\\{ \\left( \\sqrt{N} \\:\\: \n",
+    "\\mathbf{F}_{N} \\, \\mathbf{b} \\right) \\circ \n",
+    "\\left( \\mathbf{F}_{N} \\, \\mathbf{a} \\right) \\Bigg\\} \\quad . \\tag{4}\n",
     "$$"
    ]
   },
@@ -185,8 +185,8 @@
    "source": [
     "<a id='eq5'></a>\n",
     "$$\n",
-    "\\mathbf{F}_{(N)} \\mathbf{w} = \\sqrt{N} \\, \\left( \\mathbf{F}_{(N)} \\, \\mathbf{b} \\right) \\circ \n",
-    "\\left( \\mathbf{F}_{(N)} \\, \\mathbf{a} \\right) \\quad , \\tag{5}\n",
+    "\\mathbf{F}_{N} \\mathbf{w} = \\sqrt{N} \\, \\left( \\mathbf{F}_{N} \\, \\mathbf{b} \\right) \\circ \n",
+    "\\left( \\mathbf{F}_{N} \\, \\mathbf{a} \\right) \\quad , \\tag{5}\n",
     "$$"
    ]
   },
@@ -405,13 +405,13 @@
     "\\hline\n",
     "0\n",
     "\\end{bmatrix} \n",
-    "= \\mathbf{F}_{(N)}^{\\ast} \\Bigg\\{ \\left( \\sqrt{N} \\:\\: \\mathbf{F}_{(N)} \n",
+    "= \\mathbf{F}_{N}^{\\ast} \\Bigg\\{ \\left( \\sqrt{N} \\:\\: \\mathbf{F}_{N} \n",
     "\\begin{bmatrix}\n",
     "\\mathbf{b} \\\\\n",
     "\\hline\n",
     "\\mathbf{0}_{N_{a}}\n",
     "\\end{bmatrix} \\right) \\circ \n",
-    "\\left( \\mathbf{F}_{(N)} \n",
+    "\\left( \\mathbf{F}_{N} \n",
     "\\begin{bmatrix}\n",
     "\\mathbf{a} \\\\\n",
     "\\hline\n",
@@ -433,20 +433,20 @@
    "source": [
     "<a id='eq10'></a>\n",
     "$$\n",
-    "\\mathbf{F}_{(N)}  \n",
+    "\\mathbf{F}_{N}  \n",
     "\\begin{bmatrix}\n",
     "\\mathbf{w} \\\\\n",
     "\\hline\n",
     "0\n",
     "\\end{bmatrix}\n",
     "= \\sqrt{N} \\, \n",
-    "\\left( \\mathbf{F}_{(N)} \n",
+    "\\left( \\mathbf{F}_{N} \n",
     "\\begin{bmatrix}\n",
     "\\mathbf{b} \\\\\n",
     "\\hline\n",
     "\\mathbf{0}_{N_{a}}\n",
     "\\end{bmatrix} \\right) \\circ \n",
-    "\\left( \\mathbf{F}_{(N)} \n",
+    "\\left( \\mathbf{F}_{N} \n",
     "\\begin{bmatrix}\n",
     "\\mathbf{a} \\\\\n",
     "\\hline\n",
@@ -1004,13 +1004,13 @@
     "\\hline\n",
     "0\n",
     "\\end{bmatrix} \n",
-    "= \\mathbf{F}_{(N)}^{\\ast} \\Bigg\\{ \\left( \\sqrt{N} \\:\\: \\mathbf{F}_{(N)} \n",
+    "= \\mathbf{F}_{N}^{\\ast} \\Bigg\\{ \\left( \\sqrt{N} \\:\\: \\mathbf{F}_{N} \n",
     "\\begin{bmatrix}\n",
     "\\mathbf{b}[::-1] \\\\\n",
     "\\hline\n",
     "\\mathbf{0}_{N_{a}}\n",
     "\\end{bmatrix} \\right) \\circ \n",
-    "\\left( \\mathbf{F}_{(N)} \n",
+    "\\left( \\mathbf{F}_{N} \n",
     "\\begin{bmatrix}\n",
     "\\mathbf{a} \\\\\n",
     "\\hline\n",
@@ -1032,20 +1032,20 @@
    "source": [
     "<a id='eq14'></a>\n",
     "$$\n",
-    "\\mathbf{F}_{(N)}  \n",
+    "\\mathbf{F}_{N}  \n",
     "\\begin{bmatrix}\n",
     "\\mathbf{w} \\\\\n",
     "\\hline\n",
     "0\n",
     "\\end{bmatrix}\n",
     "= \\sqrt{N} \\, \n",
-    "\\left( \\mathbf{F}_{(N)} \n",
+    "\\left( \\mathbf{F}_{N} \n",
     "\\begin{bmatrix}\n",
     "\\mathbf{b}[::-1] \\\\\n",
     "\\hline\n",
     "\\mathbf{0}_{N_{a}}\n",
     "\\end{bmatrix} \\right) \\circ \n",
-    "\\left( \\mathbf{F}_{(N)} \n",
+    "\\left( \\mathbf{F}_{N} \n",
     "\\begin{bmatrix}\n",
     "\\mathbf{a} \\\\\n",
     "\\hline\n",
@@ -1568,11 +1568,70 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<a id='ex1'></a>\n",
+    "\n",
+    "### Exercise 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. In your functions file, create a function called `circular_convolution_matvec`. The function must receive the vectors $\\mathbf{a}$ and $\\mathbf{b}$ and return the vector $\\mathbf{w}$. Your function must compute the convolution by using the matrix-vector approach defined by [equation 3](#eq3). The required circulant matrix $\\mathbf{C}$ may be computed by using the function [`scipy.linalg.circulant`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.linalg.circulant.html). The required matrix-vector product must be computed by using one of your functions.\n",
+    "\n",
+    "2. In your functions file, create a function called `circular_convolution_dft`. The function must receive the vectors $\\mathbf{a}$ and $\\mathbf{b}$ and return the vector $\\mathbf{w}$. Your function must compute the convolution by using the Fourier approach defined by [equation 4](#eq4). The required DFT must be computed by using your function.\n",
+    "\n",
+    "3. In your test file, create one test for comparing the results produced by your functions `circular_convolution_matvec` and `circular_convolution_dft`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='ex2'></a>\n",
+    "\n",
+    "### Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. In your functions file, create a function called `linear_convolution_matvec`. The function must receive the vectors $\\mathbf{a}$ and $\\mathbf{b}$ and return the vector $\\mathbf{w}$. Your function must compute the convolution by using the matrix-vector approach defined by [equation 8](#eq8). The required Toeplitz matrix $\\mathbf{B}$ may be computed by using the function [`scipy.linalg.toeplitz`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.linalg.toeplitz.html). The required matrix-vector product must be computed by using one of your functions.\n",
+    "\n",
+    "5. In your functions file, create a function called `linear_convolution_dft`. The function must receive the vectors $\\mathbf{a}$ and $\\mathbf{b}$ and return the vector $\\mathbf{w}$. Your function must compute the convolution by using the Fourier approach defined by [equation 9](#eq9). The required DFT must be computed by using your function.\n",
+    "\n",
+    "6. In your test file, create one test for comparing the results produced by your functions `linear_convolution_matvec` and `linear_convolution_dft`.\n",
+    "\n",
+    "7. In your test file, create one test for comparing the results produced by your functions `linear_convolution_matvec` and `linear_convolution_dft` and the function [`numpy.convolve`](https://numpy.org/doc/stable/reference/generated/numpy.convolve.html).\n",
+    "\n",
+    "8. In your test file, create one test for comparing the results produced by your functions `circular_convolution_dft` and `linear_convolution_dft` with properly padded vectors $\\mathbf{a}$ and $\\mathbf{b}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='ex3'></a>\n",
+    "\n",
+    "### Exercise 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "9. In your functions file, create a function called `correlation_matvec`. The function must receive the vectors $\\mathbf{a}$ and $\\mathbf{b}$ and return the vector $\\mathbf{w}$. Your function must compute the correlation by using the mtrix-vector approach defined by [equation 12](#eq12). The required Toeplitz matrix $\\tilde{\\mathbf{B}}$ may be computed by using the function [`scipy.linalg.toeplitz`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.linalg.toeplitz.html). The required matrix-vector product must be computed by using one of your functions.\n",
+    "\n",
+    "10. In your functions file, create a function called `correlation_dft`. The function must receive the vectors $\\mathbf{a}$ and $\\mathbf{b}$ and return the vector $\\mathbf{w}$. Your function must compute the correlation by using the Fourier approach defined by [equation 13](#eq13). The required DFT must be computed by using your function.\n",
+    "\n",
+    "11. In your test file, create one test for comparing the results produced by your functions `correlation_matvec` and `correlation_dft`.\n",
+    "\n",
+    "12. In your test file, create one test for comparing the results produced by your functions `correlation_matvec` and `correlation_dft` and the function [`numpy.correlate`](https://numpy.org/doc/stable/reference/generated/numpy.correlate.html)."
+   ]
   }
  ],
  "metadata": {
