--- a/Content/fourier_1D_4.ipynb
+++ b/Content/fourier_1D_4.ipynb
@@ -30,7 +30,13 @@
     "* [References](#sec3)\n",
     "\n",
     "\n",
-    "* [Exercise](#exercise)"
+    "* [Exercise 1](#ex1)\n",
+    "\n",
+    "\n",
+    "* [Exercise 2](#ex2)\n",
+    "\n",
+    "\n",
+    "* [Exercise 3](#ex3)"
    ]
   },
   {
@@ -492,7 +498,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In practical situations, the Discrete Inverse Fourier Transform ([equation 46](#eq46)) is written in matrix notation, as follows:"
+    "In practical situations, the *Inverse Discrete Fourier Transform* ([equation 46](#eq46)) is written in matrix notation, as follows:"
    ]
   },
   {
@@ -517,14 +523,130 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that, to compute the Discrete Inverse Fourier Transform ([equation 50](#eq50)), it is necessary to multiply by the scale factor $1 / N$."
+    "Take a look at the supplementary file `fourier_1D_4_example.pdf` to see an example for $N = 6$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Take a look at the supplementary file `fourier_1D_4_example.pdf` to see an example for $N = 6$."
+    "Notice that, to compute the Discrete Inverse Fourier Transform ([equation 50](#eq50)), it is necessary to multiply by the scale factor $1 / N$. The scale factor used in the IDFT depends on that used in the DFT. There are three possible scale factors combinations:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1) Unscaled DFT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{g} \\xrightarrow[]{1} \\mathbf{G} \\\\\n",
+    "\\mathbf{g} \\xleftarrow[\\frac{1}{N}]{} \\mathbf{G}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2) $\\sqrt{N}$-scaled DFT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{g} \\xrightarrow[]{\\frac{1}{\\sqrt{N}}} \\mathbf{G} \\\\\n",
+    "\\mathbf{g} \\xleftarrow[\\frac{1}{\\sqrt{N}}]{} \\mathbf{G}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3) $N$-scaled DFT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{g} \\xrightarrow[]{\\frac{1}{N}} \\mathbf{G} \\\\\n",
+    "\\mathbf{g} \\xleftarrow[1]{} \\mathbf{G}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The three possible scale factors combinations presented above lead to three different DFT/IDFT combinations. Because of that, let's rewrite equations [49](#eq49) and [50](#eq50) as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq51'></a>\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{G} = \\mathbf{H} \\, \\mathbf{g} \\quad, \\tag{51}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq52'></a>\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{G} = \\mathbf{H}^{-1} \\, \\mathbf{g} \\quad. \\tag{52}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Equations [51](#eq51) and [52](#eq52) define the DFT and IDFT in terms of a matrix $\\mathbf{H}$ and its inverse $\\mathbf{H}^{-1}$, respectively. These new matrices, in turn, are defined according to the scale factor as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='tab1'></a>\n",
+    "\n",
+    "| $\\mathbf{H}$ | $\\mathbf{H}^{-1}$ |\n",
+    "| ---- | ---- |\n",
+    "| $\\mathbf{F}_{N}$ | $\\frac{1}{N} \\, \\mathbf{F}_{N}^{\\ast}$ |\n",
+    "| $\\frac{1}{\\sqrt{N}} \\, \\mathbf{F}_{N}$ | $\\frac{1}{\\sqrt{N}} \\, \\mathbf{F}_{N}^{\\ast}$ |\n",
+    "| $\\frac{1}{N} \\, \\mathbf{F}_{N}$ | $\\mathbf{F}_{N}^{\\ast}$ | \n",
+    "\n",
+    "$\\tag{Tab. 1}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This table show the required scaled factor combination to define matrices $\\mathbf{H}$ and its inverse $\\mathbf{H}^{-1}$."
    ]
   },
   {
@@ -738,57 +860,6 @@
    "source": [
     "<a id='sec2.5'></a>\n",
     "### Scipy FFT ([`scipy.fft.fft`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.fft.fft.html))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Unscaled DFT"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\mathbf{g} \\xrightarrow[]{1} \\mathbf{G} \\\\\n",
-    "\\mathbf{g} \\xleftarrow[\\frac{1}{N}]{} \\mathbf{G}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### $\\sqrt{N}$-scaled DFT"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\mathbf{g} \\xrightarrow[]{\\frac{1}{\\sqrt{N}}} \\mathbf{G} \\\\\n",
-    "\\mathbf{g} \\xleftarrow[\\frac{1}{\\sqrt{N}}]{} \\mathbf{G}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### $N$-scaled DFT"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\mathbf{g} \\xrightarrow[]{\\frac{1}{N}} \\mathbf{G} \\\\\n",
-    "\\mathbf{g} \\xleftarrow[1]{} \\mathbf{G}\n",
-    "$$"
    ]
   },
   {
