replace FN by HN and so on

--- a/Content/fourier_2D.ipynb
+++ b/Content/fourier_2D.ipynb
@@ -216,7 +216,7 @@
     "<a id='eq9'></a>\n",
     "\n",
     "$$\n",
-    "\\mathbf{G} = \\mathbf{F}_{M} \\, \\mathbf{g} \\, \\mathbf{F}_{N} \\: , \\tag{9}\n",
+    "\\mathbf{G} = \\mathbf{H}_{M} \\, \\mathbf{g} \\, \\mathbf{H}_{N} \\: , \\tag{9}\n",
     "$$"
    ]
   },
@@ -224,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $\\mathbf{G}$ is an $M \\times N$ matrix containing the DFT, $\\mathbf{g}$ is an $M \\times N$ matrix containing the data and $\\mathbf{F}_{M}$ and $\\mathbf{F}_{N}$ are the Fourier matrices (see the notebook `fourier_1D_4`) of order $M$ and $N$, respectively. [Equation 9](#eq9) represents the 2D Discrete Fourier Transform (**2D DFT**). Similarly, we can see that  [equation 8b](#eq8b) can also be rewritten in matrix form:"
+    "where $\\mathbf{G}$ is an $M \\times N$ matrix containing the DFT, $\\mathbf{g}$ is an $M \\times N$ matrix containing the data and $\\mathbf{H}_{M}$ and $\\mathbf{H}_{N}$ are the Fourier matrices (see the notebook `fourier_1D_4`) of order $M$ and $N$, respectively. [Equation 9](#eq9) represents the 2D Discrete Fourier Transform (**2D DFT**). Similarly, we can see that  [equation 8b](#eq8b) can also be rewritten in matrix form:"
    ]
   },
   {
@@ -234,7 +234,7 @@
     "<a id='eq10'></a>\n",
     "\n",
     "$$\n",
-    "\\mathbf{g} = \\frac{1}{M \\, N} \\mathbf{F}_{M}^{H} \\, \\mathbf{G} \\, \\mathbf{F}_{N}^{H} \\quad . \\tag{10}\n",
+    "\\mathbf{g} = \\mathbf{H}_{M}^{-1} \\, \\mathbf{G} \\, \\mathbf{H}_{N}^{-1} \\quad . \\tag{10}\n",
     "$$"
    ]
   },
@@ -428,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
