replace FN by H in the exercises

--- a/Content/fourier_1D_4.ipynb
+++ b/Content/fourier_1D_4.ipynb
@@ -1014,7 +1014,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. In your functions file, create a function called `fft1D`. The function must receive the data vector $\\mathbf{g}$ and the string `scale` representing the scale factor $s$ (the same defined for your function `DFT_matrix`). Your function `fft1D` must return the Discrete Fourier Transform of $\\mathbf{g}$. This function must create the DFT matrix $\\mathbf{F}_{N}$ ([equation 47](#eq47)) by using your function `DFT_matrix` and must compute the matrix-vector product by using your function `matvec_complex`.\n",
+    "3. In your functions file, create a function called `fft1D`. The function must receive the data vector $\\mathbf{g}$ and the string `scale` representing the scale factor $s$ (the same defined for your function `DFT_matrix`). Your function `fft1D` must return the Discrete Fourier Transform of $\\mathbf{g}$. This function must create the DFT matrix $\\mathbf{H}$ ([equation 51](#eq51)) by using your function `DFT_matrix` and must compute the matrix-vector product by using your function `matvec_complex`.\n",
     "4. In your test file, create one test for the function `fft1D`. This test must compare the result produced by `fft1D` and the result produced by the routine [`scipy.fft.fft`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.fft.fft.html) by using the three possible scale factors."
    ]
   },
@@ -1031,7 +1031,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. In your functions file, create a function called `ifft1D`. The function must receive a complex vector $\\mathbf{G}$ and the string `scale` representing the scale factor $s$ (the same defined for your functions `DFT_matrix` and `fft1D`). Your function `ifft1D` must return the Inverse Discrete Fourier Transform of $\\mathbf{G}$. This function must create the DFT matrix $\\mathbf{F}_{N}$ ([equation 47](#eq47)) by using your function `DFT_matrix` and must compute the matrix-vector product by using your function `matvec_complex`. Hint: given a complex numpy array 2D `A`, its conjugate transpose is given by `np.conj(A).T`.\n",
+    "5. In your functions file, create a function called `ifft1D`. The function must receive a complex vector $\\mathbf{G}$ and the string `scale` representing the scale factor $s$ (the same defined for your functions `DFT_matrix` and `fft1D`). Your function `ifft1D` must return the Inverse Discrete Fourier Transform of $\\mathbf{G}$. This function must create the DFT matrix $\\mathbf{H}^{-1}$ ([equation 52](#eq52)) by using your function `DFT_matrix` and must compute the matrix-vector product by using your function `matvec_complex`. Hint: given a complex numpy array 2D `A`, its conjugate transpose is given by `np.conj(A).T`.\n",
     "6. In your test file, create two tests for the function `ifft1D`. The first test must compare the result produced by `ifft1D` and the result produced by the routine [`scipy.fft.ifft`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.fft.ifft.html). The second test must create a real data vector $\\mathbf{g}$, compute its DFT $\\mathbf{G}$ with your function `fft1D` and then compare the computed the IDFT of $\\mathbf{G}$ with the original vector $\\mathbf{g}$ by using your function `ifft1D`."
    ]
   },
