--- a/Content/fourier_2D.ipynb
+++ b/Content/fourier_2D.ipynb
@@ -388,7 +388,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FM = dft(M, scale=None)"
+    "HM = dft(M, scale=None)"
    ]
   },
   {
@@ -397,7 +397,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FN = dft(N, scale=None)"
+    "HN = dft(N, scale=None)"
    ]
   },
   {
@@ -424,7 +424,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FTA2 = mdot([FM, A, FN])"
+    "FTA2 = mdot([HM, A, HN])"
    ]
   },
   {
@@ -462,7 +462,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IFTA2 = (1/(N*M))*mdot([np.conjugate(FM), FTA2, np.conjugate(FN)])"
+    "IFTA2 = (1/(N*M))*mdot([np.conjugate(HM), FTA2, np.conjugate(HN)])"
    ]
   },
   {
