--- a/Content/kronecker-product.ipynb
+++ b/Content/kronecker-product.ipynb
@@ -33,9 +33,9 @@
    "source": [
     "$$\\mathbf{A} \n",
     "= \\begin{bmatrix}\n",
-    "a_{11} & \\cdots & a_{1M} \\\\\n",
+    "a_{00} & \\cdots & a_{0(M-1)} \\\\\n",
     "\\vdots &        & \\vdots \\\\\n",
-    "a_{N1} & \\cdots & a_{NM}\n",
+    "a_{(N-1)0} & \\cdots & a_{(N-1)(M-1)}\n",
     "\\end{bmatrix}_{N \\times M} \\:\n",
     "$$"
    ]
@@ -53,9 +53,9 @@
    "source": [
     "$$\\mathbf{B} \n",
     "= \\begin{bmatrix}\n",
-    "b_{11} & \\cdots & b_{1P} \\\\\n",
+    "b_{00} & \\cdots & b_{0(P-1)} \\\\\n",
     "\\vdots &        & \\vdots \\\\\n",
-    "b_{L1} & \\cdots & b_{LP}\n",
+    "b_{(L-1)0} & \\cdots & b_{(L-1)(P-1)}\n",
     "\\end{bmatrix}_{L \\times P} \\: .\n",
     "$$"
    ]
@@ -77,9 +77,9 @@
     "$$\n",
     "\\mathbf{A} \\otimes \\mathbf{B}\n",
     "= \\begin{bmatrix}\n",
-    "a_{11} \\, \\mathbf{B} & \\cdots & a_{1M} \\, \\mathbf{B} \\\\\n",
+    "a_{00} \\, \\mathbf{B} & \\cdots & a_{0(M-1)} \\, \\mathbf{B} \\\\\n",
     "\\vdots &        & \\vdots \\\\\n",
-    "a_{N1} \\, \\mathbf{B} & \\cdots & a_{NM} \\, \\mathbf{B}\n",
+    "a_{(N-1)0} \\, \\mathbf{B} & \\cdots & a_{(N-1)(M-1)} \\, \\mathbf{B}\n",
     "\\end{bmatrix}_{\\, NL \\, \\times \\, MP} \\: . \\tag{1}\n",
     "$$"
    ]
@@ -132,9 +132,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.22790782 0.99563861 0.99542867 0.16192179]\n",
-      " [0.81417627 0.37756896 0.97364149 0.32643871]\n",
-      " [0.23256292 0.13988534 0.91528559 0.12311775]]\n"
+      "[[0.50357681 0.96973804 0.73056838 0.87027423]\n",
+      " [0.06757006 0.89455737 0.24410583 0.69944685]\n",
+      " [0.01029108 0.51506587 0.79679306 0.57282245]]\n"
      ]
     }
    ],
@@ -151,8 +151,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.09954247 0.2260351  0.91104976]\n",
-      " [0.07635364 0.81436109 0.30889322]]\n"
+      "[[0.21283349 0.03818903 0.58210066]\n",
+      " [0.74049306 0.0851349  0.78176005]]\n"
      ]
     }
    ],
@@ -198,18 +198,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.02268651 0.05151517 0.20763536 0.09910833 0.22504927 0.90707632\n",
-      "  0.09908743 0.22500182 0.90688505 0.01611809 0.03660001 0.14751881]\n",
-      " [0.01740159 0.18559926 0.07039918 0.07602063 0.81080935 0.30754602\n",
-      "  0.0760046  0.81063838 0.30748117 0.01236332 0.13186281 0.05001654]\n",
-      " [0.08104512 0.18403241 0.74175509 0.03758415 0.08534384 0.34398411\n",
-      "  0.09691868 0.22007715 0.88703585 0.03249451 0.0737866  0.2974019 ]\n",
-      " [0.06216532 0.66303348 0.25149353 0.02882876 0.30747747 0.11662849\n",
-      "  0.07434107 0.79289575 0.30075126 0.02492478 0.26583898 0.1008347 ]\n",
-      " [0.02314989 0.05256738 0.21187639 0.01392453 0.031619   0.12744251\n",
-      "  0.09110979 0.20688666 0.83387071 0.01225544 0.02782893 0.11216639]\n",
-      " [0.01775702 0.18939019 0.07183711 0.01068075 0.11391718 0.04320963\n",
-      "  0.06988538 0.74537297 0.28272552 0.00940049 0.1002623  0.03803024]]\n"
+      "[[1.07178011e-01 1.92311100e-02 2.93132393e-01 2.06392735e-01\n",
+      "  3.70333555e-02 5.64485156e-01 1.55489421e-01 2.78996982e-02\n",
+      "  4.25264340e-01 1.85223505e-01 3.32349291e-02 5.06587207e-01]\n",
+      " [3.72895129e-01 4.28719617e-02 3.93676227e-01 7.18084286e-01\n",
+      "  8.25585523e-02 7.58102453e-01 5.40980815e-01 6.21968671e-02\n",
+      "  5.71129171e-01 6.44432026e-01 7.40907108e-02 6.80345621e-01]\n",
+      " [1.43811717e-02 2.58043503e-03 3.93325759e-02 1.90391770e-01\n",
+      "  3.41622785e-02 5.20722436e-01 5.19538978e-02 9.32216517e-03\n",
+      "  1.42094168e-01 1.48865717e-01 2.67111971e-02 4.07148475e-01]\n",
+      " [5.00351593e-02 5.75257028e-03 5.28235721e-02 6.62413520e-01\n",
+      "  7.61580531e-02 6.99329207e-01 1.80758676e-01 2.07819262e-02\n",
+      "  1.90832189e-01 5.17935537e-01 5.95473386e-02 5.46799601e-01]\n",
+      " [2.19028623e-03 3.93006317e-04 5.99044372e-03 1.09623268e-01\n",
+      "  1.96698661e-02 2.99820183e-01 1.69584251e-01 3.04287544e-02\n",
+      "  4.63813768e-01 1.21915805e-01 2.18755342e-02 3.33440331e-01]\n",
+      " [7.62047232e-03 8.76129968e-04 8.04515412e-03 3.81402699e-01\n",
+      "  4.38500818e-02 4.02657915e-01 5.90019729e-01 6.78348984e-02\n",
+      "  6.22900977e-01 4.24171051e-01 4.87671832e-02 4.47809708e-01]]\n"
      ]
     }
    ],
@@ -438,8 +444,8 @@
     {
      "data": {
       "text/plain": [
-       "array([17.75807705, 15.90585256, 17.3616674 , 15.45978049, 11.57003195,\n",
-       "       10.44111077])"
+       "array([16.29740255, 29.38011726, 10.99195073, 19.92829039, 11.84388222,\n",
+       "       21.57915299])"
       ]
      },
      "execution_count": 18,
@@ -562,9 +568,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[17.75807705, 15.90585256],\n",
-       "       [17.3616674 , 15.45978049],\n",
-       "       [11.57003195, 10.44111077]])"
+       "array([[16.29740255, 29.38011726],\n",
+       "       [10.99195073, 19.92829039],\n",
+       "       [11.84388222, 21.57915299]])"
       ]
      },
      "execution_count": 25,
@@ -584,8 +590,8 @@
     {
      "data": {
       "text/plain": [
-       "array([17.75807705, 15.90585256, 17.3616674 , 15.45978049, 11.57003195,\n",
-       "       10.44111077])"
+       "array([16.29740255, 29.38011726, 10.99195073, 19.92829039, 11.84388222,\n",
+       "       21.57915299])"
       ]
      },
      "execution_count": 26,
@@ -675,24 +681,24 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.02268651, 0.09910833, 0.09908743, 0.01611809, 0.01740159,\n",
-       "        0.07602063, 0.0760046 , 0.01236332],\n",
-       "       [0.08104512, 0.03758415, 0.09691868, 0.03249451, 0.06216532,\n",
-       "        0.02882876, 0.07434107, 0.02492478],\n",
-       "       [0.02314989, 0.01392453, 0.09110979, 0.01225544, 0.01775702,\n",
-       "        0.01068075, 0.06988538, 0.00940049],\n",
-       "       [0.05151517, 0.22504927, 0.22500182, 0.03660001, 0.18559926,\n",
-       "        0.81080935, 0.81063838, 0.13186281],\n",
-       "       [0.18403241, 0.08534384, 0.22007715, 0.0737866 , 0.66303348,\n",
-       "        0.30747747, 0.79289575, 0.26583898],\n",
-       "       [0.05256738, 0.031619  , 0.20688666, 0.02782893, 0.18939019,\n",
-       "        0.11391718, 0.74537297, 0.1002623 ],\n",
-       "       [0.20763536, 0.90707632, 0.90688505, 0.14751881, 0.07039918,\n",
-       "        0.30754602, 0.30748117, 0.05001654],\n",
-       "       [0.74175509, 0.34398411, 0.88703585, 0.2974019 , 0.25149353,\n",
-       "        0.11662849, 0.30075126, 0.1008347 ],\n",
-       "       [0.21187639, 0.12744251, 0.83387071, 0.11216639, 0.07183711,\n",
-       "        0.04320963, 0.28272552, 0.03803024]])"
+       "array([[1.07178011e-01, 2.06392735e-01, 1.55489421e-01, 1.85223505e-01,\n",
+       "        3.72895129e-01, 7.18084286e-01, 5.40980815e-01, 6.44432026e-01],\n",
+       "       [1.43811717e-02, 1.90391770e-01, 5.19538978e-02, 1.48865717e-01,\n",
+       "        5.00351593e-02, 6.62413520e-01, 1.80758676e-01, 5.17935537e-01],\n",
+       "       [2.19028623e-03, 1.09623268e-01, 1.69584251e-01, 1.21915805e-01,\n",
+       "        7.62047232e-03, 3.81402699e-01, 5.90019729e-01, 4.24171051e-01],\n",
+       "       [1.92311100e-02, 3.70333555e-02, 2.78996982e-02, 3.32349291e-02,\n",
+       "        4.28719617e-02, 8.25585523e-02, 6.21968671e-02, 7.40907108e-02],\n",
+       "       [2.58043503e-03, 3.41622785e-02, 9.32216517e-03, 2.67111971e-02,\n",
+       "        5.75257028e-03, 7.61580531e-02, 2.07819262e-02, 5.95473386e-02],\n",
+       "       [3.93006317e-04, 1.96698661e-02, 3.04287544e-02, 2.18755342e-02,\n",
+       "        8.76129968e-04, 4.38500818e-02, 6.78348984e-02, 4.87671832e-02],\n",
+       "       [2.93132393e-01, 5.64485156e-01, 4.25264340e-01, 5.06587207e-01,\n",
+       "        3.93676227e-01, 7.58102453e-01, 5.71129171e-01, 6.80345621e-01],\n",
+       "       [3.93325759e-02, 5.20722436e-01, 1.42094168e-01, 4.07148475e-01,\n",
+       "        5.28235721e-02, 6.99329207e-01, 1.90832189e-01, 5.46799601e-01],\n",
+       "       [5.99044372e-03, 2.99820183e-01, 4.63813768e-01, 3.33440331e-01,\n",
+       "        8.04515412e-03, 4.02657915e-01, 6.22900977e-01, 4.47809708e-01]])"
       ]
      },
      "execution_count": 30,
@@ -790,8 +796,8 @@
     {
      "data": {
       "text/plain": [
-       "array([ 1.33791778,  1.34223001,  0.84245801, 11.36816664, 11.55462656,\n",
-       "        7.0300997 ,  7.17773252,  7.1097286 ,  4.59764446])"
+       "array([13.91195312,  8.96320577,  9.2613503 ,  1.66863433,  1.07826367,\n",
+       "        1.11728858, 16.489187  , 10.70688686, 11.14531272])"
       ]
      },
      "execution_count": 36,
@@ -914,9 +920,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 1.33791778, 11.36816664,  7.17773252],\n",
-       "       [ 1.34223001, 11.55462656,  7.1097286 ],\n",
-       "       [ 0.84245801,  7.0300997 ,  4.59764446]])"
+       "array([[13.91195312,  1.66863433, 16.489187  ],\n",
+       "       [ 8.96320577,  1.07826367, 10.70688686],\n",
+       "       [ 9.2613503 ,  1.11728858, 11.14531272]])"
       ]
      },
      "execution_count": 43,
@@ -936,8 +942,8 @@
     {
      "data": {
       "text/plain": [
-       "array([ 1.33791778,  1.34223001,  0.84245801, 11.36816664, 11.55462656,\n",
-       "        7.0300997 ,  7.17773252,  7.1097286 ,  4.59764446])"
+       "array([13.91195312,  8.96320577,  9.2613503 ,  1.66863433,  1.07826367,\n",
+       "        1.11728858, 16.489187  , 10.70688686, 11.14531272])"
       ]
      },
      "execution_count": 44,
