replace old 2D convolution notes by conv_2D.pdf

--- a/Content/convolution_2D.ipynb
+++ b/Content/convolution_2D.ipynb
@@ -124,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following cells illustrate the particular case in which $M = 5$ and $N = 4$ (page 13 the notes at `Content/conv_1D2D/`)."
+    "The following cells illustrate the particular case in which $M = 5$ and $N = 4$ (see the file `Content/conv_1D2D/conv_2D.pdf`)."
    ]
   },
   {
@@ -410,7 +410,7 @@
     "\\mathbf{H}_{Q}^{\\ast} \\left[ \\mathbf{L} \\circ \\left( \\mathbf{H}_{P} \\mathbf{A} \\, \\mathbf{H}_{Q} \\right) \\right] \\mathbf{H}_{Q}^{\\ast} = \\mathbf{W} \\: , \\tag{4}\n",
     "$$\n",
     "\n",
-    "where\n",
+    "where $\\mathbf{H}_{Q}$ and $\\mathbf{H}_{P}$ are Fourier matrices computed with scale factors $\\sqrt{Q}$ and $\\sqrt{P}$, respectively (see the notebook `fourier_1D_4.ipynb`), and\n",
     "\n",
     "<a id='eq5'></a>\n",
     "$$\n",
@@ -489,7 +489,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let $\\mathbf{A}$ be an $M_{a} \\times N_{a}$ matrix and $\\mathbf{B}$ be an $M_{b} \\times N_{b}$ matrix. The *2D linear convolution* of $\\mathbf{A}$ and $\\mathbf{B}$ generates a $M_{w} \\times N_{w}$ matrix $\\mathbf{W}$, where $M_{w} = M_{a} + M_{b} - 1$ and $N_{w} = N_{a} + N_{b} - 1$. It can be shown that (see the notes at `Content/conv_1D2D/`) the 2D linear convolution leads to the following matrix-vector product (see the notebook `Block_Toeplitz_circulant_matrices`):"
+    "Let $\\mathbf{A}$ be an $M_{a} \\times N_{a}$ matrix and $\\mathbf{B}$ be an $M_{b} \\times N_{b}$ matrix. The *2D linear convolution* of $\\mathbf{A}$ and $\\mathbf{B}$ generates a $M_{w} \\times N_{w}$ matrix $\\mathbf{W}$, where $M_{w} = M_{a} + M_{b} - 1$ and $N_{w} = N_{a} + N_{b} - 1$. It can be shown that (see the notes at `Content/conv_1D2D/conv_1D.pdf`) the 2D linear convolution leads to the following matrix-vector product (see the notebook `Block_Toeplitz_circulant_matrices`):"
    ]
   },
   {
@@ -537,7 +537,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following cells illustrate the particular case in which $M_{a} = 6$, $N_{a} = 4$, $M_{b} = 5$ and $N_{b} = 3$ (pages 11 and 12 of the notes at `Content/conv_1D2D/`)."
+    "The following cells illustrate the particular case in which $M_{a} = 6$, $N_{a} = 4$, $M_{b} = 5$ and $N_{b} = 3$ (see the file `Content/conv_1D2D/conv_2D.pdf`)."
    ]
   },
   {
@@ -936,14 +936,14 @@
    "source": [
     "<a id='eq9'></a>\n",
     "$$\n",
-    "\\mathbf{F}_{(P)}^{\\ast} \\left[ \\mathbf{L} \\circ \\left( \\mathbf{F}_{(P)} \\mathbf{A}_{padd} \\, \\mathbf{F}_{(Q)} \\right) \\right] \\mathbf{F}_{(Q)}^{\\ast} = \\mathbf{W}_{padd} \\: , \\tag{9}\n",
+    "\\mathbf{H}_{P}^{\\ast} \\left[ \\mathbf{L} \\circ \\left( \\mathbf{H}_{P} \\mathbf{A}_{padd} \\, \\mathbf{H}_{Q} \\right) \\right] \\mathbf{H}_{Q}^{\\ast} = \\mathbf{W}_{padd} \\: , \\tag{9}\n",
     "$$\n",
     "\n",
-    "where $\\mathbf{F}_{(Q)}$ and $\\mathbf{F}_{(P)}$ are the Fourier matrices of order $Q$ and $P$, respectively, normalized by $\\sqrt{Q}$ and $\\sqrt{P}$ (see the notebook `fourier_1D_4`), $\\mathbf{W}_{padd}$ and $\\mathbf{A}_{padd}$ are $P \\times Q$ matrices obtained, respectively, by reorganizing the vectors $\\mathbf{w}_{padd}$ ([equation 7](#eq7)) and $\\mathbf{a}_{padd}$ ([equation 8](#eq8)) along their columns and\n",
+    "where $\\mathbf{H}_{Q}$ and $\\mathbf{H}_{P}$ are the Fourier matrices of order $Q$ and $P$, respectively, normalized by $\\sqrt{Q}$ and $\\sqrt{P}$ (see the notebook `fourier_1D_4`), $\\mathbf{W}_{padd}$ and $\\mathbf{A}_{padd}$ are $P \\times Q$ matrices obtained, respectively, by reorganizing the vectors $\\mathbf{w}_{padd}$ ([equation 7](#eq7)) and $\\mathbf{a}_{padd}$ ([equation 8](#eq8)) along their columns and\n",
     "\n",
     "<a id='eq10'></a>\n",
     "$$\n",
-    "\\mathbf{L} = \\sqrt{QP} \\; \\mathbf{F}_{(P)} \\, \\mathbf{B}_{padd} \\, \\mathbf{F}_{(Q)} \\: , \\tag{10}\n",
+    "\\mathbf{L} = \\sqrt{QP} \\; \\mathbf{H}_{P} \\, \\mathbf{B}_{padd} \\, \\mathbf{H}_{Q} \\: , \\tag{10}\n",
     "$$\n",
     "\n",
     "where $\\mathbf{B}_{padd}$ is a $P \\times Q$ matrix obtained by padding matrix $\\mathbf{B}$ with zeros. Notice that, similarly, $\\mathbf{A}_{padd}$ is a $P \\times Q$ matrix obtained by padding matrix $\\mathbf{A}$ with zeros. See equations 4b and 9c of the notebook `Block_Toeplitz_circulant_matrices`."
